# zoomcamp-de

./: .gitignore
01-docker-terraform/: .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  ingest_data.py  ingest_green.py  pipeline.py  pyproject.toml  variables.tf
01-docker-terraform/docs/: README.md  commands.md
01-docker-terraform/notebooks/: ingest_green.ipynb
01-docker-terraform/scripts/: ingest_green.py  pipeline.py
01-docker-terraform/terraform/: main.tf  variables.tf
02-orchestration/: .gitignore  README.md  docker-compose.yaml
02-orchestration/docs/: commands.md
02-orchestration/flows/: 06_gcp_kv.yaml  08_gcp_taxi.yaml
03-data-warehouse/: .gitignore  README.md  homework-instructions.md
03-data-warehouse/scripts/: load_yellow_taxi_data.py
04-analytics-engineering/: README.md  pyproject.toml
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml  ingest_data_bq.py
05-data-platforms/: README.md  pyproject.toml
05-data-platforms/zoomcamp/: README.md
06-batch/: README.md  pyproject.toml
06-batch/code/: 03_test.ipynb  04_pyspark.ipynb  (+12 more)
07-streaming/: Dockerfile.flink  README.md  docker-compose.yml  pyproject.flink.toml  pyproject.toml
07-streaming/notebooks/: consumer.ipynb  producer.ipynb
07-streaming/src/: commands.md  models.py
07-streaming/src/consumers/: consumer_green_postgres.py  consumer_postgres.py
07-streaming/src/job/: aggregation_job.py  homework_5min_tumble_job.py  homework_job.py  homework_session_job.py  pass_through_job.py
07-streaming/src/producers/: producer_green_trips.py  producers.py
(+18 files in other folders)
